# digital-arbitrage

./: .env.example  .gitattributes  .gitignore  BACKLOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.example.toml  default.toml  ebay_browse.example.toml  ebay_browse.toml
docs/: DECISIONS.md  EBAY_PROVIDER_PLAN.md  ROADMAP.md  SPRINT_29_STOCKX.md  VISION.md
docs/architecture/: PRODUCT_UNDERSTANDING_ENGINE.md
scripts/: README.md
src/digital_arbitrage/: __init__.py
src/digital_arbitrage/classification/: __init__.py  classifier.py  keywords.py  matching.py  models.py
src/digital_arbitrage/comparison/: __init__.py  compare.py  models.py
src/digital_arbitrage/deduplication/: __init__.py  deduplicator.py  fingerprint.py  models.py
src/digital_arbitrage/market_pricing/: __init__.py  estimator.py  models.py  strategies.py
src/digital_arbitrage/normalization/: __init__.py  conditions.py  currency.py  location.py  models.py  normalizer.py  pipeline.py  steps.py  text.py
tests/: test_classification.py  test_cli_compare.py  test_cli_ergonomics.py  test_cli_persistence.py  test_comparison.py  test_deduplication.py  test_ebay_browse.py  test_live_auth.py  test_live_end_to_end_scan.py  test_live_providers.py  test_local_ebay_scan.py  test_market_pricing.py  test_normalization.py  test_opportunity.py  test_persistence.py  test_pipeline.py  test_pipeline_config.py  test_product_matching.py  test_product_scanner.py  test_scoring.py  test_smoke.py  test_stockx.py  test_stockx_provider.py
(+56 files in other folders)
